# marketdata-aggregator

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
client/: Cargo.toml  build.rs
client/src/: main.rs
protos/: orderbook.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/connectors/: binance.rs  bitstamp.rs  mod.rs
server/src/server/: mod.rs
server/src/state/: mod.rs
