[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
color-eyre = "0.6.5"
futures-util = "0.3.31"
ratatui = "0.29.0"
crossterm = "0.29.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
