[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
prost = "0.14.1"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
anyhow = "1.0.100"
tokio-stream = "0.1.17"
rustls = "0.23.32"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures-util = "0.3.31"
async-trait = "0.1.89"
async-stream = "0.3.6"
bigdecimal = "0.4.8"
num-traits = "0.2.19"

[dev-dependencies]
rstest = "0.20.0"

[build-dependencies]
tonic-prost-build = "0.14.2"
